Football fixture spacing

--- a/ArticleTemplates/css/scss/templates/_football-fixtures.scss
+++ b/ArticleTemplates/css/scss/templates/_football-fixtures.scss
@@ -85,7 +85,7 @@
 		}
 		.football-col-1 {
 			color: $meta;
-			@include padding(0,0.5,0,0);
+			@include padding(0,0.5,0,0.5);
 			@include mq($to: col1) {
 				@include padding(0,0.5,0,1);
 			}
@@ -113,7 +113,7 @@
 }
 
 #football-fixtures.android {
-	@include padding(0,1,0,1);
+	@include padding(1,1,0,1);
 	box-sizing: border-box;
 	
 	.football-fixtures-header {
