--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -5252,28 +5252,28 @@ figure.figure-wide img {
       color: #999999; }
       @media all and (max-width: 18.75em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 6px 0px 0px; } }
+          padding: 0px 6px 0px 6px; } }
       @media all and (min-width: 18.75em) and (max-width: 25em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 7px 0px 0px; } }
+          padding: 0px 7px 0px 7px; } }
       @media all and (min-width: 25em) and (max-width: 28.115em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 9px 0px 0px; } }
+          padding: 0px 9px 0px 9px; } }
       @media all and (min-width: 28.125em) and (max-width: 40.615em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 6px 0px 0px; } }
+          padding: 0px 6px 0px 6px; } }
       @media all and (min-width: 40.625em) and (max-width: 50em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 5px 0px 0px; } }
+          padding: 0px 5px 0px 5px; } }
       @media all and (min-width: 50em) and (max-width: 56.24em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 6px 0px 0px; } }
+          padding: 0px 6px 0px 6px; } }
       @media all and (min-width: 56.25em) and (max-width: 68.75em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 5px 0px 0px; } }
+          padding: 0px 5px 0px 5px; } }
       @media all and (min-width: 68.75em) {
         .football-fixtures-row.match .football-col-1 {
-          padding: 0px 6px 0px 0px; } }
+          padding: 0px 6px 0px 6px; } }
       @media all and (max-width: 28.115em) and (max-width: 18.75em) {
         .football-fixtures-row.match .football-col-1 {
           padding: 0px 6px 0px 12px; } }
@@ -5315,28 +5315,28 @@ figure.figure-wide img {
   box-sizing: border-box; }
   @media all and (max-width: 18.75em) {
     #football-fixtures.android {
-      padding: 0px 12px 0px 12px; } }
+      padding: 12px 12px 0px 12px; } }
   @media all and (min-width: 18.75em) and (max-width: 25em) {
     #football-fixtures.android {
-      padding: 0px 14px 0px 14px; } }
+      padding: 14px 14px 0px 14px; } }
   @media all and (min-width: 25em) and (max-width: 28.115em) {
     #football-fixtures.android {
-      padding: 0px 18px 0px 18px; } }
+      padding: 18px 18px 0px 18px; } }
   @media all and (min-width: 28.125em) and (max-width: 40.615em) {
     #football-fixtures.android {
-      padding: 0px 12px 0px 12px; } }
+      padding: 12px 12px 0px 12px; } }
   @media all and (min-width: 40.625em) and (max-width: 50em) {
     #football-fixtures.android {
-      padding: 0px 10px 0px 10px; } }
+      padding: 10px 10px 0px 10px; } }
   @media all and (min-width: 50em) and (max-width: 56.24em) {
     #football-fixtures.android {
-      padding: 0px 12px 0px 12px; } }
+      padding: 12px 12px 0px 12px; } }
   @media all and (min-width: 56.25em) and (max-width: 68.75em) {
     #football-fixtures.android {
-      padding: 0px 10px 0px 10px; } }
+      padding: 10px 10px 0px 10px; } }
   @media all and (min-width: 68.75em) {
     #football-fixtures.android {
-      padding: 0px 12px 0px 12px; } }
+      padding: 12px 12px 0px 12px; } }
   #football-fixtures.android .football-fixtures-header {
     display: none; }
 
